--- a/private.html
+++ b/private.html
@@ -1661,7 +1661,8 @@ check execution timing with one line see doFinish
 <span class="Identifier">printLnYb</span><span class="Punctuation">(</span><span class="Identifier">s</span><span class="Punctuation">)</span>
 
 <span class="Identifier">printB</span><span class="Punctuation">(</span><span class="Identifier">s</span><span class="Punctuation">)</span>
-<span class="Identifier">printG</span><span class="Punctuation">(</span><span class="Identifier">s</span><span class="Punctuation">)</span></pre>
+<span class="Identifier">printG</span><span class="Punctuation">(</span><span class="Identifier">s</span><span class="Punctuation">)</span></pre><pre class = "listing"><span class="Keyword">import</span> <span class="Identifier">private</span><span class="Punctuation">,</span><span class="Identifier">strutils</span><span class="Punctuation">,</span><span class="Identifier">strfmt</span>
+<span class="Identifier">printGb</span><span class="Punctuation">(</span><span class="StringLit">&quot;{:&lt;13}{}&quot;</span><span class="Operator">.</span><span class="Identifier">fmt</span><span class="Punctuation">(</span><span class="StringLit">&quot;abc : &quot;</span><span class="Punctuation">,</span><span class="StringLit">&quot;23e2323&quot;</span><span class="Punctuation">)</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <dt id="printGb"><a name="printGb,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">printGb</span><span class="Operator">*</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span></pre></dt>
@@ -2307,6 +2308,8 @@ fastsplit<blockquote><p>code by jehan lifted from Nim Forum</p></blockquote>
 </dd>
 <dt id="infoLine"><a name="infoLine,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">infoLine</span><span class="Operator">*</span><span class="Other">(</span><span class="Other">)</span></pre></dt>
 <dd>
+<p>infoLine</p>
+<p>prints some info for current application </p>
 
 
 </dd>
@@ -2446,7 +2449,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-09-09 18:00:33 UTC</small>
+        <small>Made with Nim. Generated: 2015-09-09 18:17:51 UTC</small>
       </div>
     </div>
   </div>
