--- a/private.html
+++ b/private.html
@@ -1461,7 +1461,7 @@ dt pre > span.Operator ~ span.Identifier, dt pre > span.Operator ~ span.Operator
 <p>Programming : qqTop</p>
 <p>Note        : may be improved at any time</p>
 </p></blockquote>
-</p>
+Var. convenience procs for colorised data output</p>
   <div class="section" id="6">
 <h1><a class="toc-backref" href="#6">Imports</a></h1>
 <dl class="item">
@@ -2449,7 +2449,7 @@ msgX templates convenience templates for colored text output the assumption is t
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br>
-        <small>Made with Nim. Generated: 2015-09-09 18:17:51 UTC</small>
+        <small>Made with Nim. Generated: 2015-09-09 18:44:41 UTC</small>
       </div>
     </div>
   </div>
